--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   <body>
     <!-- <h2>Animations</h2> -->
     <div class="animated">
-      <img class="one" src="/Images/cog.png" />
-      <img class="two" src="/Images/cog.png" />
-      <img class="three" src="/Images/cog.png" />
-      <img class="four" src="/Images/cog.png" />
-      <img class="five" src="/Images/cog.png" />
-      <img class="six" src="/Images/cog.png" />
+      <img class="one" src="./Images/cog.png" />
+      <img class="two" src="./Images/cog.png" />
+      <img class="three" src="./Images/cog.png" />
+      <img class="four" src="./Images/cog.png" />
+      <img class="five" src="./Images/cog.png" />
+      <img class="six" src="./Images/cog.png" />
     </div>
   </body>
 </html>
